--- a/works.html
+++ b/works.html
@@ -77,7 +77,7 @@
 			<div class="flex">
 			
 				<div class="img_wrap">
-					<img src="img/buka_pho.png">
+					<a href="https://bukarapi.com/" target="_blank"><img src="img/buka_pho.png"></a>
 				</div>
 				
 				<div class="block">
@@ -100,8 +100,7 @@
 			
 			
 			<h2 class="text_w4">ポートフォリオサイト</h2>
-			<p class="text_w5">写真撮影、デザイン、html、CSSによるコーディングまで行いました。<br>
-								</p>
+			<p class="text_w5">写真撮影、デザイン、html、CSS、jQueryによるコーディングまで行いました。<br></p>
 	
 	<ul class="sort-btn">
 <li class="sort00 active">全て</li><!--はじめに「全て」ボタンに現在地表示をつけるためactive というクラス名を付与-->
