文言変更、Qiita追加

--- a/about.html
+++ b/about.html
@@ -85,6 +85,7 @@
 					ヒアリング、HTML,jQuery,WordPressなどを学びました。<br>
 					現在はLaravel,Vue,XAMPP,MySQLなどを使ったサーバーサイドの実装を行なってます。<br>
 					またInstagram運用業務で、市場調査やPowerDirectorを使い動画編集を行なってます。<br>
+					<a href="https://qiita.com/takawork96" target="_blank" style="color: red;">＊Qiitaの個人記事はこちら＊</a>
 					</p>
 					
 						
