--- a/works.html
+++ b/works.html
@@ -300,11 +300,11 @@
 </li>		
 	
 	
-<li class="item sort02">
+<!-- <li class="item sort02">
 <div class="item-content">
 <a href="img/ba_9.jpg" data-fancybox="group2" data-caption="グループ2キャプション"><img src="img/ba_9.jpg" alt=""></a>
 </div>
-</li>
+</li> -->
 	
 <li class="item sort03">
 <div class="item-content">
