コード修正

--- a/works.html
+++ b/works.html
@@ -113,7 +113,7 @@
 
 <li class="item sort01"><!--li には、item というクラス名と並び替え基準となるクラス名（ボタンのクラス名と同じ名前）を付与。-->
 <div class="item-content"><!--内側のdivには高さを維持するためにitem-contentというクラス名をつける。-->
-<a href="img/kabegami.png" data-fancybox="group1" data-caption="グループ1キャプション"><img src="img/header-壁紙.png" alt=""></a><!--複数画像をグループ化してサムネイル表示させたい場合は、datafancybox="半角英数字で同一のグループ名"、キャプションを入れたい場合はdata-caption="キャプションタイトル"を設定する。-->
+<a href="img/kabegami.png" data-fancybox="group1" data-caption="グループ1キャプション"><img src="img/kabegami.png" alt=""></a><!--複数画像をグループ化してサムネイル表示させたい場合は、datafancybox="半角英数字で同一のグループ名"、キャプションを入れたい場合はdata-caption="キャプションタイトル"を設定する。-->
 </div>
 </li>
 	
