--- a/profile.html
+++ b/profile.html
@@ -111,7 +111,7 @@
 			<div class="flex">
 			
 			
-				<a href="img/flower.png" data-lightbox="group1"><img src="img/flower.png" class="photo2_1" width="200"></a>
+				<a href="img/flower.png" data-lightbox="group1"><img src="img/flower.png" class="photo2" width="200"></a>
 
 				<a href="img/canransya.png" data-lightbox="group1"><img src="img/canransya.png" class="band" width="200"></a>
 			
@@ -122,7 +122,7 @@
 			<div class="flex">
 			
 			
-				<a href="img/kamo_2.png" data-lightbox="group1"><img src="img/kamo_2.png" class="photo2_1" width="200"></a>
+				<a href="img/kamo_2.png" data-lightbox="group1"><img src="img/kamo_2.png" class="photo2" width="200"></a>
 
 				<a href="img/syabon.png" data-lightbox="group1"><img src="img/syabon.png" class="band" width="200"></a>
 			
