レティナディスプレイ対応

--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
 
 		<header>
 
-			<a class="C-name-box" href="index.html"><img src="img/namae.png" class="C-name"></a>
+			<a class="C-name-box" href="index.html">
+                <img src="img/namae.png" srcset="img/namae.png 1x, img/namae@2x.png 2x" class="C-name">
+            </a>
 			
 			<nav>
                 <ul>
@@ -131,10 +133,23 @@
 			<div class="C-photo-pc">
 			
 				<div id="photo" class="C-photo-box">
-					<img src="img/kabegami.png" width="1024px" height="500px" alt="">
-					<img src="img/cosumosu.png" width="1024px" height="500px" alt="">
-					<img src="img/ibis-rogo.png" width="1024px" height="500px" alt="">
-					<img src="img/ajisai_1.png" width="1024px" height="500px" alt="">
+					<img src="img/kabegami.png" 
+                        srcset="img/kabegami.png 1x, img/kabegami@2x.png 2x"
+                        width="1024px" height="500px" alt="かっぱ壁紙">
+
+					<img src="img/cosumosu.png"
+                        srcset="img/cosumosu.png 1x, img/cosumosu@2x.png 2x"
+                        width="1024px" height="500px" alt="コスモス壁紙">
+
+					<img src="img/ibis-rogo.png"  
+                        srcset="img/ibis-rogo.png 1x, img/ibis-rogo@2x.png 2x"
+                        width="1024px" height="500px" alt="ibis壁紙">
+
+
+					<img src="img/ajisai_1.png"      
+                        srcset="img/ajisai_1.png 1x, img/ajisai_1@2x.png 2x"
+                        width="1024px" height="500px" alt="アジサイ１壁紙">
+
 				</div>
 
 			</div>
@@ -144,10 +159,23 @@
 			<div class="C-photo-sp">
 			
 				<div id="photo2" class="C-photo-box">
-					<img src="img/kabegami.png" width="1024px" height="500px" alt="">
-					<img src="img/cosumosu.png" width="1024px" height="500px" alt="">
-					<img src="img/ibis-rogo.png" width="1024px" height="500px" alt="">
-					<img src="img/ajisai_1.png" width="1024px" height="500px" alt="">
+
+                    <img src="img/kabegami.png" 
+                        srcset="img/kabegami.png 1x, img/kabegami@2x.png 2x"
+                        width="410px" height="260px" alt="かっぱ壁紙">
+
+                    <img src="img/cosumosu.png"
+                        srcset="img/cosumosu.png 1x, img/cosumosu@2x.png 2x"
+                        width="410px" height="260px" alt="コスモス壁紙">
+
+                    <img src="img/ibis-rogo.png"  
+                        srcset="img/ibis-rogo.png 1x, img/ibis-rogo@2x.png 2x"
+                        width="410px" height="260px" alt="ibis壁紙">
+
+                    <img src="img/ajisai_1.png"      
+                        srcset="img/ajisai_1.png 1x, img/ajisai_1@2x.png 2x"
+                        width="410px" height="260px" alt="アジサイ１壁紙">
+
 				</div>
 
 			</div>
