不要な文言を削除

--- a/works.html
+++ b/works.html
@@ -173,7 +173,7 @@
 						
 					<li class="item sort01">
 					<div class="item-content">
-					<a href="img/neisi.png" data-fancybox="group1" data-caption="グループ1キャプション"><img src="img/neisi.png" alt=""></a><!--複数画像をグループ化してサムネイル表示させたい場合は、datafancybox="半角英数字で同一のグループ名"、キャプションを入れたい場合はdata-caption="キャプションタイトル"を設定する。-->
+					<a href="img/neisi.png" data-fancybox="group1" data-caption="グループ1キャプション"><img src="img/neisi.png" alt=""></a>
 					</div>
 					</li>
 						
