レティナディスプレイ対応修正

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 		<header>
 
 			<a class="C-name-box" href="index.html">
-                <img src="img/namae.png" srcset="img/namae.png 1x, img/namae@2x.png 2x" class="C-name">
+                <img src="img/namae.png" srcset="img/namae.png 1x, img/namae@2x.png 2x" width="400px" height="160px" class="C-name">
             </a>
 			
 			<nav>
